# MIDRC_MELODY

./: .flake8  .gitignore  .pylintrc  compare_delta_kappas.ipynb  config.yaml  data_loading.py  data_preprocessing.py  eod_aaod_metrics.py  generateEOD_AAODspiders.py  generateQWKspiders.py  generateQWKspiders_original.py  generate_eod_aaod_spiders.py  generate_qwk_spiders.py  plot_tools.py  pyproject.toml  qwk_metrics.py  readme.md  requirements.txt  test_truthNdemographics.csv
data/: demo_scores.csv  demo_truthNdemographics.csv
src/: melody.py  melody_gui.py
src/MIDRC_MELODY/: __main__.py  melody.py  melody_gui.py
src/MIDRC_MELODY/common/: data_loading.py  edit_config.py  eod_aaod_metrics.py  generate_eod_aaod_spiders.py  generate_qwk_spiders.py  matplotlib_spider.py  plot_tools.py  plotly_spider.py  qwk_metrics.py  table_tools.py
src/MIDRC_MELODY/gui/: config_editor.py  data_loading.py  grabbablewidget.py  main_controller.py  main_window.py  matplotlib_spider_widget.py  metrics_model.py  plotly_spider_widget.py  plotting.py  qchart_spider_widget.py  tqdm_handler.py
src/MIDRC_MELODY/gui/shared/react/: copyabletableview.py  grabbablewidget.py
src/common/: data_loading.py  eod_aaod_metrics.py  generate_eod_aaod_spiders.py  generate_qwk_spiders.py  plot_tools.py  qwk_metrics.py
src/gui/: copyabletableview.py  main_window.py  tqdm_handler.py
tests/: test_generateQWKspiders.py  test_main_window.py
